# sophya-rust-assessment

./: .gitignore  Cargo.toml  Readme.md
assets/: bookshelf.json  chair.json  table.json
src/: coords.rs  demo.rs  main.rs  math.rs
src/asset/: loader.rs  metadata.rs  mod.rs
src/physics/: mod.rs
src/render/: mod.rs  resource.rs
src/scene/: components.rs  mod.rs  scene.rs
