[package]
name = "sophya-rust-challenge"
version = "0.0.0"
authors = ["Edwin  Walda <contact@edwinwalda.me>"]
edition = "2018"
description = "Sophya's rust game engine challenge"
readme = "README.md"
repository = "https://github.com/Sophya-Challenges/sophya-rust-challenge"
keywords = []
categories = []

[dependencies]
rapier3d = "0.11.1"
hecs = "0.7.1"
macroquad = "0.3.12"
glam = "0.20"
once_cell = "1.8"
egui-macroquad = "0.7.0"
egui = '0.15'


[profile.release]
lto = "thin"

