[package]
name = "sophya-rust-challenge"
version = "0.0.0"
authors = ["Edwin  Walda <contact@edwinwalda.me>"]
edition = "2018"
description = "Sophya's rust game engine challenge"
readme = "README.md"
repository = "https://github.com/Sophya-Challenges/sophya-rust-challenge"
keywords = []
categories = []

[dependencies]
rapier3d = "0.11.1"
hecs = { version = "0.7.5", features = ["macros"] }
macroquad = { path = "C:/git/macroquad" }
glam = { version = "0.20.2", features = ["serde"] }
once_cell = "1.9.0"
egui-macroquad = "0.8.0"
egui = '0.16.1'
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.66"
anyhow = "1.0.53"
reqwest = { version = "0.11.9", features = ["blocking"] }
bytes = "1.1.0"
image = "0.23.14"
sha2 = "0.10.1"


[profile.release]
lto = "thin"

